--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>포토갤러리</title>
-		<link rel="stylesheet" href="css/reset.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<script src="http://code.jquery.com/jquery.min.js"></script>
-		<script src="js/function.js"></script>
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<script src="./js/jquery.min.js"></script>
+		<script src="./js/function.js"></script>
 	</head>
 	<body>
 		<div id="wrap">
